# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-chroot.sh, targets/netboot/netboot-combine.sh,
  targets/netboot2/netboot2-pkg.sh, targets/stage1/stage1-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh, targets/stage4/stage4-chroot.sh,
  targets/support/chroot-functions.sh, targets/support/pre-kmerge.sh,
  targets/support/unmerge.sh, targets/tinderbox/tinderbox-chroot.sh:
  Changing run_emerge to run_merge, changing both setup_portage and
  setup_myfeatures to add any USE changes to make.conf prior to merge, then
  removing the settings added, rather than (ab)using the environment.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-chroot.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage4/stage4-chroot.sh, targets/support/chroot-functions.sh,
  targets/tinderbox/tinderbox-chroot.sh:
  Rearrange some of the functions in chroot-functions.sh in preparation for
  some upcoming changes and rename setup_portage to setup_pkgmgr.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh:
  Removing an extra env-update call from stage1's preclean.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/cdtar/grub-memtest86+-cdtar.tar.bz2,
  targets/support/bootloader-setup.sh:
  Set default for grub to 0 and updated cdtar so we don't ship a half-broken
  help.msg which we didn't even use.

  28 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/bootloader-setup.sh:
  Don't write out out 'default 1' line when creating grub.conf, since the